--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body {}
+
 
 header {
   display: flex;
@@ -50,7 +50,9 @@ nav ul {
   background-color: #DAA521;
 }
 
-
+.logo{
+padding-left: 50px;
+}
 
 .link ul li a {
   padding: 10px;
@@ -63,6 +65,7 @@ nav ul {
   border: none;
   font-size: 26px;
   background-color: #DAA521;
+  padding-right: 50px;
 }
 
 /* main */
@@ -219,7 +222,7 @@ div .colonna4 {
   align-items: center;
   justify-content: space-between;
   width: 1700px;
-  height: 70px;
+  height: 100px;
   background-color: #7FFFD4;
 }
 
@@ -228,9 +231,11 @@ div .colonna4 {
   border: none;
   font-size: 26px;
   background-color: #FFB6C0;
+  padding: 5px;
 }
 
 .logo2{
   font-size: 28px;
   background-color: #FFB6C0;
+  padding: 5px;
 }
